   - dtucker@cvs.openbsd.org 2004/07/08 12:47:21      [scp.c]      Prevent scp from skipping the file following a double-error.      bz #863, ok markus@